# neurodrift

./: .env.example  .gitignore  CITATION.cff  LICENSE  pyproject.toml
apps/api/: modal_app.py
apps/web/: package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/infer/: route.ts
apps/web/components/: Controls.tsx  DropZone.tsx  RegionPanel.tsx  Viewer.tsx
apps/web/lib/: gaussians.ts  splatShader.ts  types.ts
configs/: config.yaml
configs/data/: latents_v0.yaml  oasis3.yaml  v0_walkup.yaml
configs/experiment/: flow_distill_v0.yaml  flow_v0.yaml  gsdecoder_v0.yaml  sae_v0.yaml  vae_phase1.yaml  vae_v0.yaml  vae_v0_192.yaml  vae_v0_256.yaml  vae_v0_beta_high.yaml  vae_v0_beta_low.yaml  vae_v0_disentangled.yaml  vae_v0_disentangled_noadv.yaml  vae_v0_latent32.yaml  vae_v0_latent8.yaml  vae_v0_no_cycle.yaml
configs/model/: flow_v0.yaml  gsdecoder_v0.yaml  sae_v0.yaml  vae3d.yaml  vae3d_disentangled.yaml
configs/trainer/: eight_b200.yaml  eight_b200_auto.yaml  eight_h100.yaml  single_gpu.yaml
neurodrift/: __init__.py
neurodrift/data/: __init__.py  bids.py  cli.py  io.py  latents.py  preprocess.py
neurodrift/eval/: __init__.py  flow_eval.py  metrics.py  runner.py
neurodrift/models/: __init__.py  flow.py  gsdecoder.py  sae.py  vae3d.py
neurodrift/train/: __init__.py  data_module.py  distill_module.py  flow_module.py  gsdecoder_module.py  lightning_module.py  sae_module.py
neurodrift/utils/: __init__.py  seed.py
scripts/: _verify_wiring.py  build_age_map.py  cook_and_finalize.sh  coreg_sanity.py  encode_latents.py  eval.py  fetch_data.sh  flow_cook.sh  flow_eval.py  preprocess.py  preprocess_box.sh  sae_probe.py  sanity.py  train.py  train_box.sh
scripts/fetch/: _lib.sh  _probe_abide2.py  _probe_candidates.py  _probe_openneuro.py  _probe_s3.py  abide.sh  abide_parallel.py  hcp_a.sh  hcp_d.sh  ixi.sh  lemon.sh  oasis3.sh  openbhb.sh  openneuro.sh  openneuro_datasets.txt  openneuro_parallel.py
tests/: test_build_age_map.py  test_data_module.py  test_disentangled.py  test_distill.py  test_encode_latents.py  test_eval.py  test_flow.py  test_flow_eval.py  test_gsdecoder.py  test_preprocess.py  test_sae.py  test_vae.py
