[project]
name = "neurodrift"
version = "0.0.0"
description = "Continuous-time, multimodal, lifespan, causally-steerable 3D brain foundation model."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Rishi Shah", email = "rishishah994@gmail.com" }]
keywords = [
  "brain-mri",
  "foundation-model",
  "flow-matching",
  "stochastic-interpolants",
  "3d-gaussian-splatting",
  "longitudinal",
  "causal-counterfactuals",
  "sparse-autoencoders",
]

# Core deps usable on any platform (Windows-friendly).
# Heavy / OS-specific deps live in optional groups.
dependencies = [
  "numpy>=1.26",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "nibabel>=5.2",
  "zarr>=2.18,<3",
  "einops>=0.8",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "tqdm>=4.66",
]

[project.optional-dependencies]
# Training / GPU stack. Installed on the fleet box, not necessarily locally.
gpu = [
  "torch>=2.6",
  "lightning>=2.4",
  "diffusers>=0.30",
  "transformers>=4.45",
  "accelerate>=0.34",
  "wandb>=0.18",
  "monai>=1.3",
]

# Medical imaging tooling. antspyx wheels are unreliable on Windows; gate to Linux/Mac.
imaging = [
  "antspyx>=0.4; platform_system != 'Windows'",
  "neuroharmonize>=2.1",
  "SimpleITK>=2.4",
  "pydicom>=2.4",
]

# 3D Gaussian splatting decoder. CUDA wheels — installed on the fleet box only.
splat = [
  "gsplat>=1.0",
]

# Modal serverless inference endpoint.
serve = [
  "modal>=0.66",
  "fastapi>=0.115",
  "uvicorn>=0.30",
]

# Local dev tooling.
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "hypothesis>=6.112",
  "ipython>=8.27",
]

[project.urls]
Homepage = "https://rishishah.me/neurodrift"
Repository = "https://github.com/RishiShah99/neurodrift"
Issues = "https://github.com/RishiShah99/neurodrift/issues"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neurodrift"]

# ---------- ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["neurodrift", "tests", "scripts"]

[tool.ruff.lint]
select = [
  "E", "F", "W",      # pyflakes / pycodestyle
  "I",                # isort
  "B",                # bugbear
  "UP",               # pyupgrade
  "N",                # pep8-naming
  "SIM",              # flake8-simplify
  "RUF",              # ruff-specific
]
ignore = [
  "E501",   # line length — left to formatter
  "B008",   # function call in default argument (common with Hydra)
  "N812",   # standard PyTorch / Lightning idioms (torch.nn.functional as F, lightning as L)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "N806"]
"scripts/*" = ["N812"]

# ---------- mypy ----------
[tool.mypy]
python_version = "3.11"
packages = ["neurodrift"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = false  # Hydra @hydra.main is untyped
show_error_codes = true
plugins = []

[[tool.mypy.overrides]]
module = [
  "nibabel.*",
  "monai.*",
  "neuroharmonize.*",
  "antspyx.*",
  "gsplat.*",
  "diffusers.*",
  "wandb.*",
  "zarr.*",
  "SimpleITK.*",
  "pydicom.*",
]
ignore_missing_imports = true

# ---------- pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "slow: marks tests as slow (deselect with -m 'not slow')",
  "gpu: requires CUDA",
]

# ---------- uv dependency groups (PEP 735) ----------
[dependency-groups]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "hypothesis>=6.112",
  "ipython>=8.27",
]
